# LearnOpenGL

./: .gitignore  CMakeLists.txt  Shader.h  main.cpp  main.h
shaders/: fragmentShader.glsl  vertexShader.glsl
